--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,8 +56,8 @@ flutter:
   uses-material-design: true
 
   assets:
-    - assets/roti/
     - assets/icons/
+    - assets/images/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
